# agenticapproach

./: .env  .gitignore  agentic_rag.py  agentic_retrieval.py  app.py  create_aragdoc_index.py  create_search_index.py  delete_indexes.py  main.py  orchestrated_rag.py  pyproject.toml  rag.py  research-findings.md  responses.py  test.py  test_questions.md  test_responses_auto.py
doc_intel_cache/: Apollo_Hospitals_Delhi_Annual_Report_2024-25.json  Data_Patterns_Annual_Report_2024-25.json  IndiGo_Airlines_Annual_Report_2024-25.json  Indigo_Paints_Annual_Report_2024-25.json  KPEL_Annual_Report_2024-25.json  Oracle_Financial_Services_Annual_Report_2024-25.json
